fixed spacing issue

--- a/client/src/components/Categories/categories.css
+++ b/client/src/components/Categories/categories.css
@@ -1,6 +1,6 @@
 .background {
     /* background-image: url(../../assets/faded-blue.jpg); */
-    margin-top: 13rem;
+    margin-top: 15rem;
 }
 
 h1 {
